--- a/BigSchool_ThaiTrungKien_1911061800/Content/Site.css
+++ b/BigSchool_ThaiTrungKien_1911061800/Content/Site.css
@@ -22,3 +22,14 @@ select,
 textarea {
     max-width: 280px;
 }
+.navbar-inverse{
+    background-color: #d41d50;
+    border-color: #ffffff;
+}
+.navbar-inverse{
+    color: black;
+}
+.navbar-inverse{
+    color: black;
+}
+
