--- a/BigSchool_ThaiTrungKien_1911061800/Content/bootstrap.css
+++ b/BigSchool_ThaiTrungKien_1911061800/Content/bootstrap.css
@@ -4665,7 +4665,7 @@ fieldset[disabled] .navbar-default .btn-link:focus {
   color: #ccc;
 }
 .navbar-inverse {
-  background-color: #222;
+  background-color: #d40d50;
   border-color: #080808;
 }
 .navbar-inverse .navbar-brand {
