--- a/BigSchool_ThaiTrungKien_1911061800/Content/Site.css
+++ b/BigSchool_ThaiTrungKien_1911061800/Content/Site.css
@@ -22,7 +22,7 @@ select,
 textarea {
     max-width: 280px;
 }
-.navbar-inverse{
+#changed{
     background-color: #d41d50;
     border-color: #ffffff;
 }
