--- a/BigSchool_ThaiTrungKien_1911061800/Views/Shared/_LoginPartial.cshtml
+++ b/BigSchool_ThaiTrungKien_1911061800/Views/Shared/_LoginPartial.cshtml
@@ -4,7 +4,22 @@
     using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm", @class = "navbar-right" }))
     {
     @Html.AntiForgeryToken()
+<ul>
+    <li class="dropdown">
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">@User.Identity.GetUserName() <span class="caret"></span></a>
 
+        <ul class="dropdown-menu">
+            <li>
+                <a href="#">Course I'm going</a>
+            </li>
+            <li>
+                <a href="#">Lecture I'm Going'</a>
+            </li>
+            <li role="separator" class="divider"></li>
+            <li><a href="javascript:document.getElementById('logoutForm').submit()">log Off</a></li>
+        </ul>
+    </li>
+</ul>
     <ul class="nav navbar-nav navbar-right">
         <li>
             @Html.ActionLink("Hello " + User.Identity.GetUserName() + "!", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage" })
