--- a/BigSchool_ThaiTrungKien_1911061800/Views/Courses/CourseForm.cshtml
+++ b/BigSchool_ThaiTrungKien_1911061800/Views/Courses/CourseForm.cshtml
@@ -5,11 +5,11 @@
     ViewBag.Title = "Create";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
-<h2>Create</h2>
-@using (Html.BeginForm("Create", "Courses"))
+<h2>@Model.Heading</h2>
+@using (Html.BeginForm(Model.Action, "Courses"))
 {
     @Html.AntiForgeryToken()
+    @Html.HiddenFor(m => m.Id)
     <form>
         <div class="form-group">
             @Html.LabelFor(m => m.Place)
@@ -28,7 +28,7 @@
         </div>
         <div class="form-group">
             @Html.LabelFor(m => m.Category)
-            @Html.DropDownListFor(m => m.Categories, new SelectList(Model.Categories, "Id", "Name"), "", new { @class = "form-control" })
+            @Html.DropDownListFor(m => m.Category, new SelectList(Model.Categories, "Id", "Name"), "", new { @class = "form-control" })
             @Html.ValidationMessageFor(m => m.Category)
         </div>
         <div class="form-group"></div>
