--- a/BigSchool_ThaiTrungKien_1911061800/Views/Shared/_LoginPartial.cshtml
+++ b/BigSchool_ThaiTrungKien_1911061800/Views/Shared/_LoginPartial.cshtml
@@ -10,7 +10,10 @@
 
         <ul class="dropdown-menu">
             <li>
-                <a href="#">Course I'm going</a>
+                <a href="@Url.Action("Attending", "Courses")">Course I'm going</a>
+            </li> 
+            <li>
+                <a href="@Url.Action("Mine", "Courses")">My Upcomming Course</a>
             </li>
             <li>
                 <a href="#">Lecture I'm Going'</a>
